cargo-features = ["edition2021"]

[package]
name = "komodo-passphrase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.20.3", features = ["rand"] }
hex = "0.4.3"
bitcoin_hashes = "0.10.0"
base58 = "0.2.0"
rand = {version = "0.6", features = ["std"]}